--- a/src/uttt/GUI/View/Gameboard.fxml
+++ b/src/uttt/GUI/View/Gameboard.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
    <children>
       <GridPane fx:id="macroBoard" hgap="5.0" layoutX="48.0" layoutY="61.0" prefHeight="700.0" prefWidth="700.0" vgap="5.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -172,15 +172,15 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn71" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn73" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn72" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn74" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn75" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn76" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn77" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn78" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn79" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <GridPane fx:id="gridPane8" hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -195,15 +195,15 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn81" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn82" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn84" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn85" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn83" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn86" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn87" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn88" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn89" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <GridPane fx:id="gridPane9" hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
@@ -218,15 +218,15 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn91" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn92" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn93" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn94" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn95" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn96" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn97" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn98" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn99" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </children>
